# KiriView

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitlint  .rumdl.toml  .typos.toml  AGENTS.md  Cargo.toml  DESIGN_REVIEW_CORRECT_END_STATE.md  DESIGN_REVIEW_PROGRESS.md  README.md  REUSE.toml  SPEC.md  build.rs  cargo-sources.json  devenv.nix  devenv.yaml  io.github.hnjae.KiriView.desktop  io.github.hnjae.KiriView.json  justfile  opencode.jsonc  org.hnjae.kiriview.desktop  org.hnjae.kiriview.json  typos.toml
.opencode/: oh-my-openagent.jsonc
cargo/: config
devenv/internal/: qt-cxxqt-context.nix  qt-cxxqt.nix
devenv/modules/: check-tasks.nix  cpp-lint-policy.nix  git-hooks.nix  i18n.nix  qt-cxxqt-dev.nix  rust-host-toolchain.nix  treefmt.nix
docs/: ARCHITECTURE.md  README.md  ROADMAP.md  flatpak.md  implementation-plan.md
docs/adr/: 0001-single-open-archive-document-session.md  0001-single-open-media-entry-source.md  0002-libpng-apng-streaming-decoder.md  0003-resvg-svg-rendering.md  0004-explicit-image-input-classification.md  0005-rust-png-apng-streaming-decoder.md
docs/architecture/: ARCHITECTURE.md  README.md  architecture-decisions.md  async-lifecycle.md  evolution-rules.md  extension-contracts.md  ffi-design.md  language-boundary.md  layer-ownership.md  overview.md  provider-rendering.md  state-ownership.md  target-direction.md  terminology.md  testing-strategy.md  thumbnail-source-adapters.md  workflow-shape.md
docs/planning/: README.md  current-product-boundaries.md
docs/research/: ffmpegthumbs-video-thumbnail-frame-selection.md  gnome-totem-video-thumbnail-frame-selection.md
docs/roadmap/: current-thumbnail-reveal.md  extensible-thumbnails.md
docs/spec/: README.md  comic-archives.md  file-access.md  image-display.md  main-window.md  navigation.md  scope.md  video-playback.md
flatpak/patches/: libheif-ffmpeg-avc-decoder.patch  libheif-openh264-vflip.patch
nix/devenv/: check-tasks.nix  git-hooks.nix
nix/patches/: karchive-content-checksum.patch
po/: kiriview.pot
po/ko/: kiriview.po
scripts/: cpp-lint  install-translations.sh  refresh-cxxqt-includes  update-translations.sh
src/: apnganimationreader.cpp  apngdecoder.cpp  apngdecoder.h  apngdecoder.rs  apngframecomposer.cpp  apngframecomposer.h  applicationactionregistry.cpp  applicationactionruntime.cpp  applicationactionruntime.h  applicationmenupresentationruntime.cpp  applicationruntime.cpp  applicationruntime.h  applicationruntime.rs  applicationshortcutpolicy.cpp  applicationshortcutpolicy.h  applicationshortcutruntime.cpp  applicationshortcutruntime.h  applicationstate.rs  archivebackend.cpp  archivebackend.h  archivebackend_directory.cpp  archivebackend_karchive.cpp  archivebackend_libarchive.cpp  archivebackend_p.h  archivedocumentcandidateloadstate.h  archivedocumentsessionruntime.cpp  archivedocumentsessionruntime.h  archivedocumentsessionstore.cpp  archivedocumentsessionstore.h  archiveformat.cpp  archiveformat.h  archivepath.cpp  archivepath.h  archivepath.rs  asyncobjectslot.cpp  asyncobjectslot.h  avifcompat.cpp  avifcompat.h  avifcompat.rs  bmff.rs  (+349 more)
src/apngdecoder/: parser.rs  render.rs  tests.rs
src/application/: applicationactionhost.h  applicationactionregistry.cpp  applicationactionregistry.h  applicationactionruntime.cpp  applicationactionruntime.h  applicationactionsourceattachment.cpp  applicationactionsourceattachment.h  applicationactionstatepolicy.cpp  applicationactionstatepolicy.h  applicationcommandportsource.cpp  applicationcommandportsource.h  applicationcommandrouter.cpp  applicationcommandrouter.h  applicationdiagnostics.cpp  applicationdiagnostics.h  applicationmenupresentationruntime.cpp  applicationmenupresentationruntime.h  applicationmenupresentationstate.cpp  applicationmenupresentationstate.h  applicationruntime.cpp  applicationruntime.h  applicationruntimebridge.cpp  applicationruntimebridge.h  applicationshortcutpolicy.cpp  applicationshortcutpolicy.h  applicationshortcutruntime.cpp  applicationshortcutruntime.h  applicationstartupsource.cpp  applicationstartupsource.h  applicationtypes.h  applicationzoompresets.h  imageactionavailability.cpp  imageactionavailability.h  imageactionavailabilitypolicy.cpp  imageactionavailabilitypolicy.h  imageactionavailabilityruntime.cpp  imageactionavailabilityruntime.h  kiriviewapplicationactions.cpp  kiriviewapplicationactions.h  menuaccesskeyinput.cpp  (+13 more)
src/archive/: archivebackend.cpp  archivebackend.h  archivebackend_directory.cpp  archivebackend_karchive.cpp  archivebackend_libarchive.cpp  archivebackend_p.h  archivedocumentcandidateloadstate.cpp  archivedocumentcandidateloadstate.h  archivedocumentsessionrunner.cpp  archiveformat.cpp  (+26 more)
tests/cpp/: CMakeLists.txt  archive_session_test_support.h  candidate_test_support.h  image_async_test_support.h  image_document_plan_test_support.h  image_test_support.h  media_entry_source_test_support.h  qml_component_test_support.h  test_activenavigationboundarytext.cpp  test_activenavigationprojection.cpp  test_activenavigationprojectionconversion.cpp  test_activenavigationthumbnaildemand.cpp  test_activenavigationthumbnailprojection.cpp  test_activenavigationthumbnailruntime.cpp  test_animationtiming.cpp  test_apnganimationreader.cpp  test_apngdecoder.cpp  test_apngframecomposer.cpp  test_apngrgbabuffer.cpp  test_applicationactionregistry.cpp  test_applicationactionruntime.cpp  test_applicationactionsourceattachment.cpp  test_applicationactionstatepolicy.cpp  test_applicationcommandrouter.cpp  test_applicationmenupresentationruntime.cpp  test_applicationmenupresentationstate.cpp  test_applicationruntime.cpp  test_applicationshortcutpolicy.cpp  test_applicationstartupsourceconversion.cpp  test_architectureboundaries.cpp  test_archivebackend.cpp  test_archivedocumentcandidateloadstate.cpp  test_archivedocumentsessionrunner.cpp  test_archivedocumentsessionruntime.cpp  test_archivedocumentsessionstore.cpp  test_archiveformat.cpp  test_archiveformatconversion.cpp  test_archivepath.cpp  test_boundarynotification.cpp  test_decodedimagepresentation.cpp  (+259 more)
(+759 files in other folders)
