[package]
name = "kiriview"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
cxx = "1.0.192"
cxx-qt = "0.8.1"
cxx-qt-lib = { version = "0.8.1", features = ["qt_full"] }
resvg = "0.47.0"

[build-dependencies]
cxx-qt-build = { version = "0.8.1", features = ["link_qt_object_files"] }
